Fix hover event firing on mobile; add animation to all modals

--- a/ui/src/components/UiModal/style.css
+++ b/ui/src/components/UiModal/style.css
@@ -16,3 +16,16 @@
 .ui-modal.has-padding {
   padding: 0;
 }
+
+.ui-modal-overlay.ReactModal__Overlay {
+  opacity: 0;
+  transition: opacity 200ms ease-in-out;
+}
+
+.ui-modal-overlay.ReactModal__Overlay--after-open {
+  opacity: 1;
+}
+
+.ui-modal-overlay.ReactModal__Overlay--before-close {
+  opacity: 0;
+}
